@@ -230,6 +230,7 @@ t/default/assign.t
 t/default/begin.t
 t/default/bit-not.t
 t/default/bit-operator.t
+t/default/commaop.t
 t/default/comparison-operator.t
 t/default/compile-error.t
 t/default/complex.t
@@ -247,7 +248,6 @@ t/default/increment.t
 t/default/inline.t
 t/default/interface.t
 t/default/isa.t
-t/default/lib-CORE.t
 t/default/lib/TestCase.spvm
 t/default/lib/TestCase/Add.spvm
 t/default/lib/TestCase/Array.spvm
@@ -255,7 +255,6 @@ t/default/lib/TestCase/Assign.spvm
 t/default/lib/TestCase/Begin.spvm
 t/default/lib/TestCase/BitNot.spvm
 t/default/lib/TestCase/BitOperator.spvm
-t/default/lib/TestCase/Byte.spvm
 t/default/lib/TestCase/Comparator.spvm
 t/default/lib/TestCase/ComparisonOperator.spvm
 t/default/lib/TestCase/CompileError/Add/LeftIsNotNumeric.spvm
@@ -310,12 +309,9 @@ t/default/lib/TestCase/Complex.spvm
 t/default/lib/TestCase/Concat.spvm
 t/default/lib/TestCase/Constant.spvm
 t/default/lib/TestCase/Convert.spvm
-t/default/lib/TestCase/CoreFunc/Basic.spvm
-t/default/lib/TestCase/CoreFunc/Math.spvm
 t/default/lib/TestCase/Data/Weaken.spvm
 t/default/lib/TestCase/Destructor.spvm
 t/default/lib/TestCase/Divide.spvm
-t/default/lib/TestCase/Double.spvm
 t/default/lib/TestCase/Empty.spvm
 t/default/lib/TestCase/Enum.spvm
 t/default/lib/TestCase/Enum/Data1.spvm
@@ -328,13 +324,10 @@ t/default/lib/TestCase/Extension2.config
 t/default/lib/TestCase/Extension2.spvm
 t/default/lib/TestCase/FatCamma.spvm
 t/default/lib/TestCase/FILE.spvm
-t/default/lib/TestCase/Float.spvm
 t/default/lib/TestCase/For.spvm
-t/default/lib/TestCase/Hash.spvm
 t/default/lib/TestCase/If.spvm
 t/default/lib/TestCase/Increment.spvm
 t/default/lib/TestCase/Inline.spvm
-t/default/lib/TestCase/Int.spvm
 t/default/lib/TestCase/Interface.spvm
 t/default/lib/TestCase/Interface/ImplementInterface1.spvm
 t/default/lib/TestCase/Interface/ImplementInterface2.spvm
@@ -342,17 +335,26 @@ t/default/lib/TestCase/Interface/Interface.spvm
 t/default/lib/TestCase/Isa.spvm
 t/default/lib/TestCase/JSON.spvm
 t/default/lib/TestCase/JSON/Bool.spvm
+t/default/lib/TestCase/Lib/SPVM/Byte.spvm
+t/default/lib/TestCase/Lib/SPVM/CORE.spvm
+t/default/lib/TestCase/Lib/SPVM/Double.spvm
+t/default/lib/TestCase/Lib/SPVM/FileHandle.spvm
+t/default/lib/TestCase/Lib/SPVM/Float.spvm
+t/default/lib/TestCase/Lib/SPVM/Hash.spvm
+t/default/lib/TestCase/Lib/SPVM/Int.spvm
+t/default/lib/TestCase/Lib/SPVM/List.spvm
+t/default/lib/TestCase/Lib/SPVM/Long.spvm
+t/default/lib/TestCase/Lib/SPVM/Short.spvm
+t/default/lib/TestCase/Lib/SPVM/Unicode.spvm
 t/default/lib/TestCase/LINEN.spvm
 t/default/lib/TestCase/LINER.spvm
 t/default/lib/TestCase/LINERN.spvm
-t/default/lib/TestCase/List.spvm
 t/default/lib/TestCase/Literal/Character.spvm
 t/default/lib/TestCase/Literal/FloatingPoint.spvm
 t/default/lib/TestCase/Literal/Integer.spvm
 t/default/lib/TestCase/Literal/String.spvm
 t/default/lib/TestCase/Literal/Undef.spvm
 t/default/lib/TestCase/LogicalOperator.spvm
-t/default/lib/TestCase/Long.spvm
 t/default/lib/TestCase/Minimal.spvm
 t/default/lib/TestCase/Multiply.spvm
 t/default/lib/TestCase/MyExe.spvm
@@ -373,7 +375,7 @@ t/default/lib/TestCase/Private.spvm
 t/default/lib/TestCase/Ref.spvm
 t/default/lib/TestCase/Remainder.spvm
 t/default/lib/TestCase/Return.spvm
-t/default/lib/TestCase/Short.spvm
+t/default/lib/TestCase/Seqop.spvm
 t/default/lib/TestCase/Simple.spvm
 t/default/lib/TestCase/SpecialAssign.spvm
 t/default/lib/TestCase/SPVM/IO.spvm
@@ -385,7 +387,6 @@ t/default/lib/TestCase/Switch.spvm
 t/default/lib/TestCase/Term.spvm
 t/default/lib/TestCase/UnaryMinus.spvm
 t/default/lib/TestCase/UnaryPlus.spvm
-t/default/lib/TestCase/Unicode.spvm
 t/default/lib/TestCase/Unless.spvm
 t/default/lib/TestCase/ValueTArray.spvm
 t/default/lib/TestCase/Var.spvm
@@ -406,6 +407,7 @@ t/default/precedence.t
 t/default/ref.t
 t/default/remainder.t
 t/default/return.t
+t/default/seqop.t
 t/default/special-assign.t
 t/default/string.t
 t/default/sub.t
@@ -422,5 +424,6 @@ t/default/while.t
 t/exe.t
 t/lib/TestAuto.pm
 t/spvm_build/.gitkeep
+t/test_files/fread.txt
 yacc/bison.sh
 yacc/spvm_yacc.y
