@@ -6,6 +6,8 @@
   - add fopen
   - add fclose
   - add fread
+  - improve error message
+  - precompile anon sub is always compiled
 0.0413 2018-01-22
   - add replaceb
   - add replaces
